...
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/tiny_margin"
            android:layout_marginBottom="@dimen/tiny_margin"
            android:text="@string/file_open"/>

        <Button
            android:id="@+id/btn_save"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/tiny_margin"
            android:layout_marginBottom="@dimen/tiny_margin"
            android:text="@string/file_save"/>
...
